<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCardView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardView">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/cardView_margin"
        android:layout_marginTop="@dimen/cardView_margin"
        android:layout_marginEnd="@dimen/cardView_margin">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardView"
            android:layout_gravity="bottom"
            android:background="@drawable/pizza_americana"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/transparentBlack"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/pizzaNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizzaAmericana_nameCard"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_pizzaCard" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pricePizzaCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizzaPrice"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize_priceCard" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/stockPizzaCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stockD"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize_stockCard"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>